gradle can now start the UI